Added navbar and footer styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,8 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+@import "components/index";
+@import "pages/index";
+@import "pages/navbar";
+@import "pages/footer"
