--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -1,5 +1,5 @@
 <div class="tutor-name">
-  <h1><%= "#{@tutor.first_name}" "#{@tutor.last_name}" %></h1>
+  <h1><%= "#{@tutor.user.first_name}" "#{@tutor.user.last_name}" %></h1>
 </div>
 
 <div class="tutor-details">
