show tutor button and back button added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<%= link_to tutors_index_path, class: "btn btn-secondary" do %>
+      <i class="fa-solid fa-arrow-right"></i> Go to Tutors
+    <% end %>
