--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -2,9 +2,9 @@
 
 <%= simple_form_for @tutor do |f| %>
   <%= f.input :user_id %>
-  <%= f.input :first_name %>
-  <%= f.input :last_name %>
-  <%= f.input :email %>
+  <%= f.input :first_name, input_html: {value: @mentor.first_name, readonly: true} %>
+  <%= f.input :last_name, input_html: {value: @mentor.last_name, readonly: true} %>
+  <%= f.input :email, input_html: {value: @mentor.email, readonly: true} %>
   <%= f.input :price %>
   <%= f.input :qualification %>
   <%= f.input :key_stage %>
