--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -15,3 +15,7 @@
  <%= link_to tutors_index_path, class: "btn btn-secondary" do %>
       <i class="fa-solid fa-arrow-left"></i> Back to Tutors
     <% end %>
+
+<%= link_to new_tutor_booking_path(@tutor), class: "btn btn-secondary" do %>
+   Book this tutor
+<% end %>
