--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to Rent-a-Mentor</h1>
+<p>Find your ideal tutor to maximise your learning journey</p>
+
 
 <%= link_to tutors_index_path, class: "btn btn-secondary" do %>
-      <i class="fa-solid fa-arrow-right"></i> Go to Tutors
+      <i class="fa-solid fa-arrow-right"></i> View tutors
     <% end %>
