--- a/app/views/tutors/index.html.erb
+++ b/app/views/tutors/index.html.erb
@@ -1,9 +1,22 @@
-<div class="title">
-  <h1>Tutor List</h1>
-</div>
+<h1 class="text-center my-4">Our Tutors</h1>
 
-<div>
-  <% @tutors.each do |tutor| %>
-    <%= link_to "#{tutor.user.first_name} #{tutor.user.last_name}", tutor_path(tutor), class: "tutor-link" %>
-  <% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-2">
+      <table class="table table-striped table-bordered">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Tutor Name</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @tutors.each do |tutor| %>
+            <tr>
+              <td><%= link_to "#{tutor.user.first_name} #{tutor.user.last_name}", tutor_path(tutor), class: "tutor-link" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
