--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,12 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
+$red: #f14d3c; // uber- highlight
+$blue: #3c93fd;
+$yellow: #FFC65A; //warnings
 $orange: #E67E22;
-$green: #006838;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$green: #006838; //heading text
+$light-green: #bcdfaa; //buttons & highlights
+$gray: #0E0000; //text and outlines
+$light-gray: #eae8e8; //background
+$white: #f7f6f5;
