--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,7 +2,11 @@
 @import "home";
 
 body {
-  background-color: $green;
+  background-color: $light-gray;
   padding-top: 0px;
   margin-top: 0px;
+}
+
+h1 {
+  color: $green;
 }
