--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,18 +2,11 @@
   <%= link_to root_path do %>
     <%= image_tag "logo.svg", alt: "Rent-a-Mentor", class: "navbar-logo" %>
   <% end %>
+
   <div class="nav-right">
-    <%= link_to new_tutor_path, class: "btn btn-secondary" do %>
-      <i class="fa-solid"></i> Become a tutor
-    <% end %>
+    <%= link_to "Become a tutor", new_tutor_path %>
 
-    <% if current_user %>
-      <%= link_to tutor_bookings_path(tutor_id: current_user&.id), class: "btn btn-secondary" do %>
-        <i class="fa-solid"></i> Manage My Bookings
-      <% end %>
-    <% end %>
-
-
+    <%= link_to "Manage My Bookings", tutor_bookings_path(tutor_id: current_user&.id) %>
 
 
 
