added profile styling

--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -3,13 +3,8 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: white;
+  background-color: $light-green;
   padding: 10px;
-  z-index: 1000;
   align-items: baseline;
-
-  .footer-items {
-
-  }
 
 }
