--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -10,3 +10,14 @@ body {
 h1 {
   color: $green;
 }
+
+h3 {
+  font-family: "funnel sans";
+  font-weight: 800;
+  color: $green;
+}
+
+p {
+  color: $green;
+  font-weight: 500;
+}
