--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,12 @@
 <div class="nav">
   <%= link_to root_path do %>
-    <%= image_tag "logo.svg", alt: "Rent-a-Mentor", class: "navbar-logo" %>
+    <%= image_tag "logo2.svg", alt: "Rent-a-Mentor", class: "navbar-logo" %>
   <% end %>
 
   <div class="nav-right">
     <%= link_to "Become a tutor", new_tutor_path %>
 
-    <%= link_to "Manage My Bookings", tutor_bookings_path(tutor_id: current_user&.id) %>
+    <%= link_to "Manage my bookings", tutor_bookings_path(tutor_id: current_user&.id) %>
 
 
 
