--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -1,20 +1,26 @@
-<div class="tutor-name">
-  <h1><%= "#{@tutor.user.first_name}" "#{@tutor.user.last_name}" %></h1>
+
+<div class="tutor-profile">
+  <div class="tutor-name">
+    <img class="rounded-circle shadow-4-strong" height="200px" alt="avatar2" src="https://media.istockphoto.com/id/1223671392/vector/default-profile-picture-avatar-photo-placeholder-vector-illustration.jpg?s=612x612&w=0&k=20&c=s0aTdmT5aU6b8ot7VKm11DeID6NctRCpB755rA1BIP0=" />
+    <h1><%= "#{@tutor.user.first_name}" "#{@tutor.user.last_name}" %></h1>
+
+  <%= link_to tutors_index_path, class: "btn btn-secondary" do %>
+        <i class="fa-solid fa-arrow-left"></i> Back to Tutors
+      <% end %>
+  </div>
+
+  <div class="right-column">
+    <div class="tutor-details">
+      <h3><%= "£#{@tutor.price} per hour" %></h3>
+      <p><%= "Highest Qualification Level: #{@tutor.qualification}" %></p>
+      <p><%= "Teaches Keystage: #{@tutor.key_stage}" %></p>
+      <p><%= "Email: #{@tutor.email}" %></p>
+      <%= link_to new_tutor_booking_path(@tutor), class: "btn btn-secondary" do %>
+      Book this tutor
+      <% end %>
+    </div>
+      <div class="tutor-reviews">
+      <h2>Reviews</h2>
+    </div>
+  </div>
 </div>
-
-<div class="tutor-details">
-
-  <p><%= "Highest Qualification Level: #{@tutor.qualification}" %></p>
-  <p><%= "Teaches Keystage: #{@tutor.key_stage}" %></p>
-  <p><%= "Email: #{@tutor.email}" %></p>
-  <p><%= "Price: #{@tutor.price}" %></p>
-
-</div>
-
- <%= link_to tutors_index_path, class: "btn btn-secondary" do %>
-      <i class="fa-solid fa-arrow-left"></i> Back to Tutors
-    <% end %>
-
-<%= link_to new_tutor_booking_path(@tutor), class: "btn btn-secondary" do %>
-   Book this tutor
-<% end %>
