--- a/app/views/bookings/index_for_tutor.html.erb
+++ b/app/views/bookings/index_for_tutor.html.erb
@@ -1,9 +1,8 @@
-<h1 class="text-center my-4">All My Bookings</h1>
+<h1 class="text-center my-4">Bookings for <%= @tutor.first_name %> <%= @tutor.last_name %></h1>
 
 <table class="table table-striped table-bordered">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Tutor Name</th>
       <th scope="col">Date</th>
       <th scope="col">Time</th>
       <th scope="col">Actions</th>
@@ -12,7 +11,6 @@
   <tbody>
     <% @bookings.each do |booking| %>
       <tr>
-        <td><%= booking.tutor.first_name %> <%= booking.tutor.last_name %></td>
         <td><%= booking.day.strftime('%B %d, %Y') %></td>
         <td><%= booking.time.strftime('%I:%M %p') %></td>
         <td>
@@ -25,6 +23,6 @@
   </tbody>
 </table>
 
-<%= link_to root_path, class: "btn btn-secondary" do %>
-  <i class="fa-solid fa-arrow-left"></i> Back to Home
+<%= link_to tutors_path, class: "btn btn-secondary" do %>
+  <i class="fa-solid fa-arrow-left"></i> Back to Tutors
 <% end %>
