--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,14 +8,10 @@
     <% end %>
 
     <% if current_user %>
-      <%= link_to tutor_bookings_path(tutor_id: current_user&.id), class: "btn btn-secondary" do %>
+      <%= link_to bookings_path, class: "btn btn-secondary" do %>
         <i class="fa-solid"></i> Manage My Bookings
       <% end %>
     <% end %>
-
-
-
-
 
      <%= button_to destroy_user_session_path, method: :delete, class: "btn btn-secondary" do %>
       <i class="fa-solid"></i> Log out
