--- a/app/views/tutors/index.html.erb
+++ b/app/views/tutors/index.html.erb
@@ -1,22 +1,26 @@
 <h1 class="text-center my-4">Our Tutors</h1>
 
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-2">
-      <table class="table table-striped table-bordered">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">Tutor Name</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @tutors.each do |tutor| %>
-            <tr>
-              <td><%= link_to "#{tutor.user.first_name} #{tutor.user.last_name}", tutor_path(tutor), class: "tutor-link" %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
+<div class="container index-container">
+  <div class="row">
+    <% @tutors.each do |tutor| %>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card-info">
+          <div class="image">
+            <img src="https://cdn.pixabay.com/photo/2018/11/13/21/43/avatar-3814049_1280.png" class="profile-img"/>
+          </div>
+          <div class="title">
+            <h3><%= link_to "#{tutor.user.first_name} #{tutor.user.last_name}", tutor_path(tutor), class: "tutor-link" %></h3>
+          </div>
+          <div class="card-details">
+            <p><%= "#{tutor.qualification}" %></p>
+            <p><%= "#{tutor.key_stage}" %></p>
+            <p><%= "#{tutor.price}/ph" %></p>
+          </div>
+          <div class="rating">
+            <p>🍎</p>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
