--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,11 +2,11 @@
   <%= link_to root_path do %>
     <%= image_tag "logo2.svg", alt: "Rent-a-Mentor", class: "navbar-logo" %>
   <% end %>
-  
+
   <div class="nav-right">
     <%= link_to "Become a tutor", new_tutor_path %>
 
-    <%= link_to "Manage my bookings", tutor_bookings_path(tutor_id: current_user&.id) %>
+    <%= link_to "Manage my bookings", bookings_path(tutor_id: current_user&.id) %>
 
      <%= button_to destroy_user_session_path, method: :delete, class: "btn btn-secondary" do %>
       <i class="fa-solid"></i> Log out
