--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -13,9 +13,8 @@
   height: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: flex;
-  align-items: center;
-  gap: 25px;
+  align-items: flex-start;
+  gap: 10px;
   margin-bottom: 30px;
   border-radius: 5px;
   box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
@@ -24,27 +23,59 @@
 .image {
   background-color: $light-green;
   width: 100%;
-  height: 40px;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   .profile-img {
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    justify-items: center;
     box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
   }
 }
 
+.title {
+  padding-top: 30px;
+}
 
 .tutor-link {
   color: $green;
   text-decoration: none;
+  font-family: $headers-font;
+  padding-left: 20px;
+  padding-bottom: 40px;
+  font-family: $headers-font;
+  font-size: 25px;
+  text-shadow: 1px 5px 10px rgba(0,0,0,0.2);
+
 
   &:hover {
     text-decoration: underline;
   }
 }
 
+.card-details {
+  background-color: $light-gray;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: baseline;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+p {
+  margin: 3;
+  padding: 0;
+}
+
 .rating {
-  padding-bottom: 10px;
+  width: 100%;
+  padding-bottom: 5px;
+  padding-right: 20px;
+  display: flex;
+  justify-content: flex-end;
 }
