Added booking form styling. Footer issue persists!

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "components/index";
 @import "pages/index";
 @import "components/tutor-profile";
+@import "components/booking-form";
 
 @import "components/index";
 @import "pages/index";
