--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,20 +4,35 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 0px;
+  gap: 30px;
 }
 
 .card-info {
   background-color: $white;
   width: 300px;
-  height: 400px;
+  height: 330px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
+  margin-right: 80px;
   border-radius: 5px;
   box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
+}
+
+.verified{
+  width: 100px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+.fa-solid {
+  color: $blue ;
+  font-size: 25px;
+  padding-left: 33px;
+  text-shadow: 1px 5px 10px rgba(0,0,0,0.2);
 }
 
 .image {
@@ -27,29 +42,42 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
 
   .profile-img {
-    height: 150px;
-    width: 150px;
+    height: 140px;
+    width: 140px;
     border-radius: 50%;
     box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
+
   }
 }
 
+.rating {
+  width: 100px;
+}
+
+.apple {
+  font-size: 25px;
+  padding-left: 30px;
+  padding-top: 12px;
+  text-shadow: 1px 5px 10px rgba(0,0,0,0.2);
+}
+
 .title {
-  padding-top: 30px;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .tutor-link {
   color: $green;
   text-decoration: none;
-  font-family: $headers-font;
+  font-family: $body-font;
+  font-weight: bold;
   padding-left: 20px;
   padding-bottom: 40px;
-  font-family: $headers-font;
   font-size: 25px;
   text-shadow: 1px 5px 10px rgba(0,0,0,0.2);
-
 
   &:hover {
     text-decoration: underline;
@@ -63,19 +91,23 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: baseline;
-  padding-top: 20px;
-  padding-left: 20px;
+  // padding-top: 20px;
+  // padding-left: 15px;
 }
 
-p {
-  margin: 3;
-  padding: 0;
+.info-logo {
+  color: $mid-gray;
+  font-size: 13px;
+  padding-right: 5px;
 }
 
-.rating {
-  width: 100%;
+.tutor-details {
+  margin: 0px;
+  padding-top: 5px;
   padding-bottom: 5px;
-  padding-right: 20px;
-  display: flex;
-  justify-content: flex-end;
+  font-weight: lighter;
+}
+
+.fa-sterling-sign {
+  padding-right: 10px;
 }
