minor formatting changes

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,6 +7,6 @@ $yellow: #FFC65A; //warnings
 $orange: #E67E22;
 $green: #006838; //heading text
 $light-green: #bcdfaa; //buttons & highlights
-$gray: #0E0000; //text and outlines
+$gray: #393838; //text and outlines
 $light-gray: #eae8e8; //background
 $white: #f7f6f5;
