--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,30 +1,35 @@
-<h1 class="text-center my-4">All My Bookings</h1>
+<div class="booking-form">
+  <div class="booking-form-card">
 
-<table class="table table-striped table-bordered">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Tutor Name</th>
-      <th scope="col">Date</th>
-      <th scope="col">Time</th>
-      <th scope="col">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @bookings.each do |booking| %>
+  <h1 class="text-center my-4">All My Bookings</h1>
+
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
       <tr>
-        <td><%= booking.tutor.first_name %> <%= booking.tutor.last_name %></td>
-        <td><%= booking.day.strftime('%B %d, %Y') %></td>
-        <td><%= booking.time.strftime('%I:%M %p') %></td>
-        <td>
-          <%= button_to booking_path(booking), method: :delete, class: "btn btn-danger" do %>
-            <i class="fa-solid fa-trash"></i> Delete
-          <% end %>
-        </td>
+        <th scope="col">Tutor Name</th>
+        <th scope="col">Date</th>
+        <th scope="col">Time</th>
+        <th scope="col">Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @bookings.each do |booking| %>
+        <tr>
+          <td><%= booking.tutor.first_name %> <%= booking.tutor.last_name %></td>
+          <td><%= booking.day.strftime('%B %d, %Y') %></td>
+          <td><%= booking.time.strftime('%I:%M %p') %></td>
+          <td>
+            <%= button_to booking_path(booking), method: :delete, class: "btn btn-danger" do %>
+              <i class="fa-solid fa-trash"></i> Delete
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to root_path, class: "btn btn-secondary" do %>
-  <i class="fa-solid fa-arrow-left"></i> Back to Home
-<% end %>
+  <%= link_to root_path, class: "btn btn-secondary" do %>
+    <i class="fa-solid fa-arrow-left"></i> Back to Home
+  <% end %>
+  </div>
+</div>
