added login and signup buttons

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,9 @@
 <%= link_to tutors_index_path, class: "btn btn-secondary" do %>
       <i class="fa-solid fa-arrow-right"></i> View tutors
     <% end %>
+
+
+<div class="login-signup">
+  <%= link_to "Login", new_user_session_path, class: "btn btn-primary"%>
+  <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary"%>
+</div>
