--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <main>
         <%= yield %>
       </main>
-      <%= render 'shared/footer' %>
+      <%# <%= render 'shared/footer' %>
     </div>
   </body>
 </html>
