--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,7 +7,7 @@ $yellow: #FFC65A; //warnings
 $orange: #E67E22;
 $green: #006838; //heading text
 $light-green: #bcdfaa; //buttons & highlights
-$gray: #393838;;
+$gray: #191919;
 $mid-gray: #414040;//text and outlines
 $light-gray: #eae8e8; //background
 $white: #f7f6f5;
