--- a/app/assets/stylesheets/components/_tutor-profile.scss
+++ b/app/assets/stylesheets/components/_tutor-profile.scss
@@ -1,34 +1,23 @@
 .tutor-profile {
   margin: 20px;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  display: flex;
+  flex-direction: column;
   gap: 2rem;
-  justify-content: left;
+  background-color: $light-green;
+  padding: 20px;
+  border-radius: 20px;
+  flex: 2;
+  gap: 20px;
+  margin-top: 20px;
 
-  .tutor-name {
-    align-items: center;
-    display: inline-block;
+    .tutor-name {
+      align-items: center;
+      display: inline-block;
+    }
   }
 
-  .right-column {
-    gap: 20px;
+  .tutor-reviews {
 
-    .tutor-details {
-      background-color: $light-green;
-      padding: 20px;
-      border-radius: 20px;
-      flex: 2;
-      gap: 20px;
-    }
-
-    .tutor-reviews {
-      background-color: $light-green;
-      padding: 20px;
-      border-radius: 20px;
-      flex: 2;
-      gap: 20px;
-      margin-top: 20px;
-    }
   }
 
   h3 {
@@ -41,5 +30,3 @@
     color: $green;
     font-weight: 500;
   }
-
-}
