--- a/app/assets/stylesheets/components/_tutor-profile.scss
+++ b/app/assets/stylesheets/components/_tutor-profile.scss
@@ -1,23 +1,16 @@
 .tutor-profile {
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  background-color: $light-green;
-  padding: 20px;
-  border-radius: 20px;
-  flex: 2;
+  width: 80%;
+  display: grid;
   gap: 20px;
-  margin-top: 20px;
+  margin: auto;
+  padding: 50px;
+  background-color: $light-green;
+  box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
 
     .tutor-name {
       align-items: center;
       display: inline-block;
     }
-  }
-
-  .tutor-reviews {
-
   }
 
   h3 {
