More fiddling with styling

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,7 @@
 <div class="booking-form">
   <div class="booking-form-card">
 
-  <h1 class="text-center my-4">All My Bookings</h1>
+  <h1 class="text-center my-4">All current bookings</h1>
 
   <table class="table table-striped table-bordered">
     <thead class="thead-dark">
@@ -28,8 +28,8 @@
     </tbody>
   </table>
 
-  <%= link_to root_path, class: "btn btn-secondary" do %>
-    <i class="fa-solid fa-arrow-left"></i> Back to Home
+  <%= link_to root_path, class: "btn btn-success" do %>
+    Back to Home
   <% end %>
   </div>
 </div>
