--- a/app/assets/stylesheets/components/_tutor-profile.scss
+++ b/app/assets/stylesheets/components/_tutor-profile.scss
@@ -1,25 +1,36 @@
 .tutor-profile {
+  margin-top: 20px;
   width: 80%;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 20px;
   margin: auto;
   padding: 50px;
   background-color: $light-green;
-  box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
+  box-shadow: 1px 5px 20px rgba(0, 0, 0, 0.2);
+}
 
-    .tutor-name {
-      align-items: center;
-      display: inline-block;
-    }
-  }
+main {
+  padding-top: 20px;
+}
 
-  h3 {
-    font-family: "funnel sans";
-    font-weight: 800;
-    color: $green;
-  }
+.tutor-name {
+  text-align: center;
+}
 
-  p {
-    color: $green;
-    font-weight: 500;
-  }
+.tutor-name img {
+  display: block;
+  margin: 0 auto;
+}
+
+h3 {
+  font-family: "funnel sans";
+  font-weight: 800;
+  color: $green;
+}
+
+p {
+  color: $green;
+  font-weight: 500;
+}
