--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,9 +8,10 @@
 
     <%= link_to "Manage my bookings", bookings_path %>
 
-     <%= button_to destroy_user_session_path, method: :delete, class: "btn btn-secondary" do %>
-      <i class="fa-solid"></i> Log out
+     <%= button_to destroy_user_session_path, method: :delete, class: "btn btn-success" do %>
+      Log out
     <% end %>
+
     <i class="fa-solid fa-user" style="color: #006838; font-size: 24px;"></i>
   </div>
 </div>
