--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -1,11 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-12">
+    <div class="col-6">
       <div class="tutor-profile">
         <div class="tutor-name">
           <img class="rounded-circle shadow-4-strong" height="200px" alt="avatar2" src="https://media.istockphoto.com/id/1223671392/vector/default-profile-picture-avatar-photo-placeholder-vector-illustration.jpg?s=612x612&w=0&k=20&c=s0aTdmT5aU6b8ot7VKm11DeID6NctRCpB755rA1BIP0=" />
           <h1><%= "#{@tutor.user.first_name} #{@tutor.user.last_name}" %></h1>
           </div>
+        </div>
+        </div>
+      <div class="col-6">
           <div class="tutor-details">
             <h3><%= "£#{@tutor.price} per hour" %></h3>
             <p><%= "Highest Qualification Level: #{@tutor.qualification}" %></p>
@@ -21,7 +24,7 @@
               <p>No subjects currently listed.</p>
             <% end %>
             <p><%= "Email: #{@tutor.email}" %></p>
-            <%= link_to new_tutor_booking_path(@tutor), class: "btn btn-secondary" do %>
+            <%= link_to new_tutor_booking_path(@tutor), class: "btn btn-success" do %>
             Book this tutor
             <% end %>
           </div>
