--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,6 @@
 <h1>Welcome to Rent-a-Mentor</h1>
 <p>Find your ideal tutor to maximise your learning journey</p>
-
-
-<%= link_to tutors_index_path, class: "btn btn-secondary" do %>
-      <i class="fa-solid fa-arrow-right"></i> View tutors
-    <% end %>
-
+<p>Sign up to book a tutor or become a tutor</p>
 
 <div class="login-signup">
   <%= link_to "Login", new_user_session_path, class: "btn btn-primary"%>
