--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -16,8 +16,8 @@
       <% @bookings.each do |booking| %>
         <tr>
           <td><%= booking.tutor.first_name %> <%= booking.tutor.last_name %></td>
-          <td><%= booking.day.strftime('%B %d, %Y') %></td>
-          <td><%= booking.time.strftime('%I:%M %p') %></td>
+          <td><%= booking.day&.strftime('%B %d, %Y') %></td>
+          <td><%= booking.time&.strftime('%I:%M %p') %></td>
           <td>
             <%= button_to booking_path(booking), method: :delete, class: "btn btn-danger" do %>
               <i class="fa-solid fa-trash"></i> Delete
@@ -28,8 +28,8 @@
     </tbody>
   </table>
 
-  <%= link_to root_path, class: "btn btn-secondary" do %>
-    <i class="fa-solid fa-arrow-left"></i> Back to Home
+  <%= link_to tutors_path, class: "btn btn-secondary" do %>
+    <i class="fa-solid fa-arrow-left"></i> Back to Tutors
   <% end %>
   </div>
 </div>
