--- a/app/views/bookings/index_for_tutor.html.erb
+++ b/app/views/bookings/index_for_tutor.html.erb
@@ -11,8 +11,8 @@
   <tbody>
     <% @bookings.each do |booking| %>
       <tr>
-        <td><%= booking.day.strftime('%B %d, %Y') %></td>
-        <td><%= booking.time.strftime('%I:%M %p') %></td>
+        <td><%= booking.day&.strftime('%B %d, %Y') %></td>
+        <td><%= booking.time&.strftime('%I:%M %p') %></td>
         <td>
           <%= button_to booking_path(booking), method: :delete, class: "btn btn-danger" do %>
             <i class="fa-solid fa-trash"></i> Delete
