--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -26,3 +26,11 @@ footer {
 h1 {
   color: $green;
 }
+
+a {
+  font-weight: 600;
+  text-decoration: none;
+  a:hover {
+    color: $light-green;
+  }
+}
