--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -19,8 +19,8 @@
           <td><%= booking.day&.strftime('%B %d, %Y') %></td>
           <td><%= booking.time&.strftime('%I:%M %p') %></td>
           <td>
-            <%= button_to booking_path(booking), method: :delete, class: "btn btn-danger" do %>
-              <i class="fa-solid fa-trash"></i> Delete
+            <%= button_to booking_path(booking), method: :delete, class: "btn btn-warning" do %>
+             Delete
             <% end %>
           </td>
         </tr>
