--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,35 +1,35 @@
 <div class="booking-form">
   <div class="booking-form-card">
+    <h1 class="text-center my-4">All current bookings</h1>
 
-  <h1 class="text-center my-4">All current bookings</h1>
-
-  <table class="table table-striped table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">Tutor Name</th>
-        <th scope="col">Date</th>
-        <th scope="col">Time</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @bookings.each do |booking| %>
+    <table class="table table-striped table-bordered">
+      <thead class="thead-dark">
         <tr>
-          <td><%= booking.tutor.first_name %> <%= booking.tutor.last_name %></td>
-          <td><%= booking.day&.strftime('%B %d, %Y') %></td>
-          <td><%= booking.time&.strftime('%I:%M %p') %></td>
-          <td>
-            <%= button_to booking_path(booking), method: :delete, class: "btn btn-danger" do %>
-              <i class="fa-solid fa-trash"></i> Delete
-            <% end %>
-          </td>
+          <th scope="col">Tutor Name</th>
+          <th scope="col">Date</th>
+          <th scope="col">Time</th>
+          <th scope="col">Actions</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% @bookings.each do |booking| %>
+          <tr>
+            <td><%= booking.tutor.first_name %> <%= booking.tutor.last_name %></td>
+            <td><%= booking.day&.strftime('%B %d, %Y') %></td>
+            <td><%= booking.time&.strftime('%I:%M %p') %></td>
+            <td>
+              <%= link_to "Manage", edit_tutor_booking_path(booking.tutor, booking), class: "btn btn-warning btn-sm me-2" %>
+              <%= button_to booking_path(booking), method: :delete, class: "btn btn-danger btn-sm" do %>
+                <i class="fa-solid fa-trash"></i> Delete
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-  <%= link_to root_path, class: "btn btn-success" do %>
-    Back to Home
-  <% end %>
+    <%= link_to root_path, class: "btn btn-success" do %>
+      Back to Home
+    <% end %>
   </div>
 </div>
