--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -21,52 +21,42 @@
   box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
 }
 
-.verified{
-  width: 100px;
+.image {
+  background-color: $light-green;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  width: 100%;
+  height: 120px;
   display: flex;
-  justify-items: center;
   align-items: center;
+  justify-content: center;
+
+  .profile-img {
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+  }
+}
+
+.title-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.verified{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .fa-solid {
   color: $blue ;
   font-size: 25px;
   padding-left: 33px;
-  text-shadow: 1px 5px 10px rgba(0,0,0,0.2);
-}
-
-.image {
-  background-color: $light-green;
-  width: 100%;
-  height: 120px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
-
-  .profile-img {
-    height: 140px;
-    width: 140px;
-    border-radius: 50%;
-    box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
-
-  }
-}
-
-.rating {
-  width: 100px;
-}
-
-.apple {
-  font-size: 25px;
-  padding-left: 30px;
-  padding-top: 12px;
-  text-shadow: 1px 5px 10px rgba(0,0,0,0.2);
-}
-
-.title {
-  padding-top: 20px;
-  padding-bottom: 10px;
+  font-size: 18px;
+  padding-bottom: 3px;
+  padding-right: 10px;
 }
 
 .tutor-link {
@@ -77,7 +67,6 @@
   padding-left: 20px;
   padding-bottom: 40px;
   font-size: 25px;
-  text-shadow: 1px 5px 10px rgba(0,0,0,0.2);
 
   &:hover {
     text-decoration: underline;
@@ -85,7 +74,6 @@
 }
 
 .card-details {
-  background-color: $light-gray;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -110,4 +98,33 @@
 
 .fa-sterling-sign {
   padding-right: 10px;
+}
+
+.card-footer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.rating {
+  width: 100%;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  height: 40px;
+  padding-top: 5px;
+  display: flex;
+  justify-content: space-between;
+  background-color: $light-gray;
+}
+
+.rating-text {
+  height: 10px;
+  padding-left: 10px;
+  padding-top: 2px;
+}
+
+.apples {
+  height: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
 }
