--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -16,6 +16,11 @@
     text-decoration: none;
   }
 
+  a:hover {
+    color: $orange;
+    text-decoration: none;
+  }
+
   .nav-right {
     padding: 10;
     display: flex;
