--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -28,9 +28,11 @@ h1 {
 }
 
 a {
-  font-weight: 600;
   text-decoration: none;
-  a:hover {
-    color: $light-green;
-  }
+  color: $green;
+}
+
+a:hover {
+  text-decoration: none;
+  color: $orange;
 }
