--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -4,7 +4,7 @@
       <div class="tutor-profile">
         <!-- Tutor Image and Name -->
         <div class="tutor-name">
-          <img class="rounded-circle shadow-4-strong" height="200px" alt="avatar2" src="https://media.istockphoto.com/id/1223671392/vector/default-profile-picture-avatar-photo-placeholder-vector-illustration.jpg?s=612x612&w=0&k=20&c=s0aTdmT5aU6b8ot7VKm11DeID6NctRCpB755rA1BIP0=" />
+          <img class="rounded-circle shadow-4-strong" height="200px" alt="avatar2" src="<%= @tutor.user.photo %>" />
           <h1><%= "#{@tutor.user.first_name} #{@tutor.user.last_name}" %></h1>
           </div>
             <div class="favorites-section mt-4">
