More stylin added: tutors show and index

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -12,7 +12,8 @@
       <%= form.time_field :time, class: "form-control" %>
     </div>
 
-    <%= form.submit "Save Changes", class: "btn btn-primary" %>
-    <%= link_to "Cancel", tutor_bookings_path(@booking.tutor), class: "btn btn-secondary" %>
+    <%= form.submit "Save Changes", class: "btn btn-success" %>
+    <%= link_to "Cancel", tutor_bookings_path(@booking.tutor), class: "btn btn-info" %>
   <% end %>
+
 </div>
