--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
 
     <%= link_to "Favourites", favourites_path, class: "nav-link" %>
 
-    <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-secondary" %>
+    <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-success" %>
 
   </div>
 </div>
