--- a/app/views/tutors/index.html.erb
+++ b/app/views/tutors/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center my-4">Our Tutors</h1>
+<h1 class="text-center my-4">Our tutors</h1>
 
 <div class="container index-container">
   <div class="row">
@@ -7,7 +7,7 @@
         <div class="card-info">
 
           <div class="image">
-            <img src="https://cdn.pixabay.com/photo/2018/11/13/21/43/avatar-3814049_1280.png" class="profile-img"/>
+            <img src="<%= tutor.user.photo %>" class="profile-img"/>
           </div>
 
           <div class="title-box">
