--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -2,68 +2,59 @@
   <div class="row">
     <div class="col-6">
       <div class="tutor-profile">
-        <!-- Tutor Image and Name -->
         <div class="tutor-name">
           <img class="rounded-circle shadow-4-strong" height="200px" alt="avatar2" src="<%= @tutor.user.photo %>" />
           <h1><%= "#{@tutor.user.first_name} #{@tutor.user.last_name}" %></h1>
-          </div>
-            <div class="favorites-section mt-4">
-    <!-- Align Buttons and Rating Form Side-by-Side -->
-    <div class="d-flex align-items-center">
-      <% if current_user.favourite_tutors.include?(@tutor) %>
-        <!-- Remove from Favorites Button -->
-        <%= button_to "Remove favourite",
-              favourite_path(current_user.favourites.find_by(tutor: @tutor)),
-              method: :delete,
-              class: "btn btn-warning me-3" %>
-
-        <!-- Rate the Tutor Form -->
-        <%= form_tag favourite_path(current_user.favourites.find_by(tutor: @tutor)), method: :patch, class: "d-inline-flex align-items-center" do %>
-          <div class="form-group d-flex align-items-center">
-            <label for="rating" class="me-2">Rate:</label>
-            <%= number_field_tag "favourite[rating]", current_user.favourites.find_by(tutor: @tutor).rating, in: 0..5, step: 1, class: "form-control w-25 me-2" %>
-            <%= submit_tag "Submit rating", class: "btn btn-success me-3" %>
-          </div>
-        <% end %>
-      <% else %>
-        <!-- Add to Favorites Button -->
-        <%= button_to "Add to favorites",
-              tutor_favourites_path(@tutor),
-              method: :post,
-              class: "btn btn-success me-3" %>
-      <% end %>
-
-      <!-- Back to Tutors Button -->
-      </div>
-
-    <!-- Link to Favorites Page -->
-</div>
-
         </div>
-        </div>
-      <div class="col-6">
-          <div class="tutor-details">
-            <h3><%= "£#{@tutor.price} per hour" %></h3>
-            <p><%= "Highest Qualification Level: #{@tutor.qualification}" %></p>
-            <p><%= "Teaches Keystage: #{@tutor.key_stage}" %></p>
-            <p>Subjects Taught</p>
-            <% if @tutor.subjects.any? %>
-              <ul class="subjects-list">
-                <% @tutor.subjects.each do |subject| %>
-                  <li><%= subject.name %></li>
-                <% end %>
-              </ul>
+
+        <div class="favorites-section mt-4">
+          <div class="d-flex align-items-center">
+            <% if current_user.favourite_tutors.include?(@tutor) %>
+              <%= button_to "Remove favourite", favourite_path(current_user.favourites.find_by(tutor: @tutor)), method: :delete, class: "btn btn-warning me-3" %>
+
+              <%= form_tag favourite_path(current_user.favourites.find_by(tutor: @tutor)), method: :patch, class: "d-inline-flex align-items-center" do %>
+                <div class="form-group d-flex align-items-center">
+                  <label for="rating" class="me-2">Rate:</label>
+                  <%= number_field_tag "favourite[rating]", current_user.favourites.find_by(tutor: @tutor).rating, in: 0..5, step: 1, class: "form-control w-25 me-2" %>
+                  <%= submit_tag "Submit rating", class: "btn btn-success me-3" %>
+                </div>
+              <% end %>
             <% else %>
-              <p>No subjects currently listed.</p>
+              <%= button_to "Add to favorites", tutor_favourites_path(@tutor), method: :post, class: "btn btn-success me-3" %>
             <% end %>
-            <p><%= "Email: #{@tutor.email}" %></p>
-            <%= link_to new_tutor_booking_path(@tutor), class: "btn btn-success" do %>
-            Book this tutor
-          <% end %>
-          <%= link_to "Back to Tutors", tutors_path, class: "btn btn-info" %>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Favorites and Ratings Section -->
+    <div class="col-6">
+      <br>
+      <br>
+      <div class="tutor-details">
+        <h3><%= "£#{@tutor.price} per hour" %></h3>
+        <p class="tutor-details"><i class="info-logo fa-solid fa-user-graduate"></i><%= "Education level: #{@tutor.qualification}" %></p>
+        <p class="tutor-details"><i class="info-logo fa-solid fa-key"></i><%= "Teaching level: #{@tutor.key_stage}" %></p>
+        <br>
+        <p>Subjects Taught</p>
+
+        <% if @tutor.subjects.any? %>
+          <ul class="subjects-list">
+            <% @tutor.subjects.each do |subject| %>
+              <li><%= subject.name %></li>
+            <% end %>
+          </ul>
+        <% else %>
+          <p>No subjects currently listed.</p>
+        <% end %>
+
+        <p><%= "Email: #{@tutor.email}" %></p>
+
+        <%= link_to new_tutor_booking_path(@tutor), class: "btn btn-success" do %>
+          Book this tutor
+        <% end %>
+
+        <%= link_to "Back to Tutors", tutors_path, class: "btn btn-info" %>
+      </div>
+    </div>
+  </div>
+</div>
