--- a/app/assets/stylesheets/components/_tutor-profile.scss
+++ b/app/assets/stylesheets/components/_tutor-profile.scss
@@ -11,9 +11,9 @@
   box-shadow: 1px 5px 20px rgba(0, 0, 0, 0.2);
 }
 
-main {
-  padding-top: 20px;
-}
+// main {
+//   padding-top: 20px;
+// }
 
 .tutor-name {
   text-align: center;
