--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,39 @@
 // Specific CSS for your home-page
+
+// .body {
+//   background-image: url("apple-background.png"), linear-gradient(to bottom right, $green, $light-green);
+//   background-size: cover;
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   opacity: .5;
+// }
+.home-page {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  // justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.page-title {
+  text-align: center;
+}
+
+.sign-up-box {
+  background-color: $light-green;
+  height: 280px;
+  width: 550px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 5px;
+  margin-top: 100px;
+  box-shadow: 1px 5px 20px rgba(0,0,0,0.2);
+}
+
+.btn-primary {
+  background-color: $green;
+  color: $white;
+}
