--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   <body>
     <div id="app-container">
       <%= render 'shared/navbar' %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <p class="notice m-0"><%= notice %></p>
+      <p class="alert m-0"><%= alert %></p>
       <main>
         <%= yield %>
       </main>
